<resources>
    <string name="app_name">Wanna Help</string>
    <string name="loading_tv">Loading...</string>
    <string name="profile">Profile</string>
    <string name="bottom_nav_news">News</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_help">Help</string>
    <string name="bottom_nav_history">History</string>
    <string name="profile_name">Константинов Денис</string>
    <string name="birthday">Born</string>
    <string name="birthday_data">February 01 1980</string>
    <string name="field_of_activity">Occupation</string>
    <string name="field_of_activity_value">Surgery, traumatology</string>
    <string name="push_notification">Push notification</string>
    <string name="your_friends">Friends</string>
    <string name="first_friend">Дмитрий Валерьевич</string>
    <string name="second_friend">Евгений Александров</string>
    <string name="third_friend">Виктор Кузнецов</string>
    <string name="log_out">Log out</string>
    <string name="simbirsoft">mobile.SimbirSoft</string>
    <string name="choose_photo">Choose photo</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="delete">Delete</string>
    <string name="kids">Kids</string>
    <string name="adults">Adults</string>
    <string name="elderly">The Elderly</string>
    <string name="pets">Animals</string>
    <string name="events">Events</string>
    <string name="help_titel">Choose help category</string>
    <string name="search_event_tv1">Напишите в строке поиска название\nмероприятия или ключевые слова.</string>
    <string name="search_event_tv2">Например,</string>
    <string name="search_event_tv3"><u>мастер-класс, помощь</u></string>
    <string name="search_nko_tv">Ключевые слова: мастер-класс, помощь\nРезультаты поиска: 109 мероприятий</string>
    <string name="pager_events_title">Events</string>
    <string name="pager_nko_title">NKO</string>
    <string name="search_view_hint">Введите название организации</string>
    <string name="magnifying_glass">Увеличительное стекло</string>
    <string name="filter">Фильтр</string>
    <string name="help_category">Категории помощи</string>
    <string name="link_to_org"><u>Перейти на сайт организации</u></string>
    <string name="any_question"><u>Напишите нам</u></string>

</resources>
