<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/bottom_nav_news"
        android:icon="@drawable/news"
        android:title="@string/bottom_nav_news" />
    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/searh"
        android:title="@string/bottom_nav_search" />
    <item
        android:id="@+id/bottom_nav_help"
        android:icon="@drawable/heart"
        android:title="@string/bottom_nav_help" />
    <item
        android:id="@+id/bottom_nav_history"
        android:icon="@drawable/history"
        android:title="@string/bottom_nav_history" />
    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

</menu>